[package]
name = "bisc"
version = "0.1.0"
authors = ["Michael Pankov <work@michaelpankov.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biscuit = "0.5.0"
serde = "1.0.124"
num = "0.3.1"
hex = "0.4.3"
chrono = "0.4.19"
